<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:weightSum="2"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_header"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/picture_massage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/hot_stone_massage" />

        <ImageView
            android:id="@+id/gradient_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/black_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/service_hot_stone_massage"
            android:textSize="40dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="441dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_price_duration"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_service">

        <TextView
            android:id="@+id/title_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_price"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="13dp"
            android:text="@string/title_duration"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="441dp" />

        <TextView
            android:id="@+id/title_duration2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_price"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="13dp"
            android:text="@string/duration_hot_stone_massage"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="441dp" />

        <TextView
            android:id="@+id/title_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="11dp"
            android:text="@string/title_price"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="441dp" />

        <TextView
            android:id="@+id/title_price3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="11dp"
            android:text="@string/price_hot_stone_massage"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="441dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/title_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/service_title"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header" />

    <RelativeLayout
        android:id="@+id/layout_ideal_for"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_price_duration">

        <TextView
            android:id="@+id/title_ideal_for4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ideal_for_hot_stone_massage"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:id="@+id/title_ideal_for2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="22dp"
            android:text="@string/title_ideal_for"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.055" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_benefits"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/background_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/title_benefit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="58dp"
            android:text="@string/title_benefits"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/title_ideal_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="16dp"
            android:text="@string/benefit_hot_stone_massage"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.055" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_book_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/button_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_benefits"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>